--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     </h4>
     <div class="list-group">
       <a href="https://github.com/qt19623/GY489.github.io" class="list-group-item list-group-item-action">GitHub</a>
-      <a href="project.html" class="list-group-item list-group-item-action">DS Project UK meat consumption</a>
-      <a href="practice.html" class="list-group-item list-group-item-action">DS portfolio</a>
-      <a href="flood.html" class="list-group-item list-group-item-action">Flood Prevention</a>
-      <a href="wapus.html" class="list-group-item list-group-item-action">Weatherization Assistance Program</a>
+      <a href="practice.html" class="list-group-item list-group-item-action">practice</a>
     </div>
   </div>
  <!-- 
