--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </h4>
     <div class="list-group">
       <a href="https://github.com/qt19623/GY489.github.io" class="list-group-item list-group-item-action">GitHub</a>
-      <a href="practice.html" class="list-group-item list-group-item-action">practice</a>
+      <a href="stage1.html" class="list-group-item list-group-item-action">1. Bike Counts</a>
     </div>
   </div>
  <!-- 
