Update and rename practice.html to stage1.html

--- a/stage1.html
+++ b/stage1.html
@@ -39,7 +39,7 @@
 <body>
 
   <h1>GY489</h1>
-  <h2>DS 복습</h2>
+  <h2>1. Bike Counts</h2>
    
   <a href="index.html">
   <button class="links">Main</button>
