--- a/stage1.html
+++ b/stage1.html
@@ -54,6 +54,17 @@
       vegaEmbed('#chart1', myChart1);
     </script>
 </div>
+  
+  
+   <p>sharebike</p>
+       <!--Chart 1 -->
+<div class="chart" id="chart2">
+    <script>
+      var myChart2 = "sharebike.json";
+      vegaEmbed('#chart2', myChart2);
+    </script>
+</div>
+  
 </body>
 <!-- ///////////////////  END BODY //////////////////////////////////// -->
 
