--- a/stage1.html
+++ b/stage1.html
@@ -50,7 +50,7 @@
        <!--Chart 1 -->
 <div class="chart" id="chart1">
     <script>
-      var myChart1 = "counterbike.json";
+      var myChart1 = "stage1/counterbike.json";
       vegaEmbed('#chart1', myChart1);
     </script>
 </div>
@@ -60,7 +60,7 @@
        <!--Chart 1 -->
 <div class="chart" id="chart2">
     <script>
-      var myChart2 = "sharebike.json";
+      var myChart2 = "stage1/sharebike.json";
       vegaEmbed('#chart2', myChart2);
     </script>
 </div>
