--- a/stage1.html
+++ b/stage1.html
@@ -65,6 +65,14 @@
     </script>
 </div>
   
+ <h2></h2> 
+    <p></p>
+  </a>
+  <img class="fit-picture"
+     src="stage1/Daily Bike Counter.png"
+     alt="Linear regression of real GDP and PISA mathematics performance">
+   
+  
 </body>
 <!-- ///////////////////  END BODY //////////////////////////////////// -->
 
