--- a/stage1.html
+++ b/stage1.html
@@ -70,7 +70,7 @@
   </a>
   <img class="fit-picture"
      src="stage1/Daily Bike Counter.png"
-     alt="Linear regression of real GDP and PISA mathematics performance">
+     alt="Daily Bike Counter">
    
   
 </body>
