--- a/stage1.html
+++ b/stage1.html
@@ -64,13 +64,51 @@
       vegaEmbed('#chart2', myChart2);
     </script>
 </div>
-  
  <h2></h2> 
     <p></p>
   <img class="fit-picture"
      src="stage1/Daily Bike Counter.png"
      alt="Daily Bike Counter">
-   
+ 
+    <p></p>
+  <img class="fit-picture"
+     src="stage1/Yearly Citibike Count.png"
+     alt="Yearly Citibike Count">
+   <img class="fit-picture"
+     src="stage1/Monthly Citibike Count.png"
+     alt="Monthly Citibike Count">
+   <img class="fit-picture"
+     src="stage1/Aggregated Hourly Citibike Count.png"
+     alt="Aggregated Hourly Citibike Count">
+    <p></p>
+  <img class="fit-picture"
+     src="stage1/Daily Citibike Count All.png"
+     alt="Daily Citibike Count All">
+   <img class="fit-picture"
+     src="stage1/Daily Citibike Count 06-10AM.png"
+     alt="Daily Citibike Count 06-10AM">
+   <img class="fit-picture"
+     src="stage1/Daily Citibike Count 07-09AM.png"
+     alt="Daily Citibike Count 07-09AM">
+  <img class="fit-picture"
+     src="stage1/Daily Citibike Count 08-10AM.png"
+     alt="Daily Citibike Count 08-10AM">
+   <img class="fit-picture"
+     src="stage1/Daily Citibike Count 4-7PM.png"
+     alt="Daily Citibike Count 4-7PM">
+   <img class="fit-picture"
+     src="stage1/Daily Citibike Count 10AM-4PM.png"
+     alt="Daily Citibike Count 10AM-4PM">
+
+   <img class="fit-picture"
+     src="stage1/Daily Citibike Count 06-10AM April-October.png"
+     alt="Daily Citibike Count 06-10AM April-October">
+   <img class="fit-picture"
+     src="stage1/Daily Citibike Count 06-10AM June-September.png"
+     alt=Daily Citibike Count 06-10AM June-September">
+   <img class="fit-picture"
+     src="stage1/Daily Citibike Count 06-10AM October-December.png"
+     alt="Daily Citibike Count 06-10AM October-December">
   
 </body>
 <!-- ///////////////////  END BODY //////////////////////////////////// -->
