--- a/stage1.html
+++ b/stage1.html
@@ -80,7 +80,7 @@
    <img class="fit-picture"
      src="stage1/Aggregated Hourly Citibike Count.png"
      alt="Aggregated Hourly Citibike Count">
-    <p></p>
+    <p>Citibike count dropped during the pandemic only conditional to commuting time</p>
   <img class="fit-picture"
      src="stage1/Daily Citibike Count All.png"
      alt="Daily Citibike Count All">
@@ -99,7 +99,7 @@
    <img class="fit-picture"
      src="stage1/Daily Citibike Count 10AM-4PM.png"
      alt="Daily Citibike Count 10AM-4PM">
-
+<p>no difference in growth pattern by month</p>
    <img class="fit-picture"
      src="stage1/Daily Citibike Count 06-10AM April-October.png"
      alt="Daily Citibike Count 06-10AM April-October">
