--- a/stage1.html
+++ b/stage1.html
@@ -70,7 +70,7 @@
      src="stage1/Daily Bike Counter.png"
      alt="Daily Bike Counter">
  
-    <p></p>
+    <p>Weekdays not controlled</p>
   <img class="fit-picture"
      src="stage1/Yearly Citibike Count.png"
      alt="Yearly Citibike Count">
